<resources>
    <string name="app_name">My Application</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forgot password?</string>
    <string name="students_studying_desc">Photo of students studying</string>
    <string name="registration_title">Register</string>
    <string name="name_hint">Full Name</string>
    <string name="register_button">REGISTER</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_instruction">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="send_reset_link">SEND RESET LINK</string>
    <string name="back_to_login">Back to Login</string>
</resources>