<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/themeSwitchButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Switch Theme"
        android:src="@drawable/ic_moon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/forex_image_algos"
            android:scaleType="centerCrop"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000040"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/curvy_blue_border"
            android:padding="12dp"
            android:textColor="#000000"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/curvy_blue_border"
            android:padding="12dp"
            android:textColor="#000000"
            android:layout_marginBottom="16dp" />

        <RadioGroup
            android:id="@+id/roleRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/radioStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student"
                android:checked="true"
                android:layout_marginEnd="8dp"/>

            <RadioButton
                android:id="@+id/radioLecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lecturer"
                android:layout_marginEnd="8dp"/>

            <RadioButton
                android:id="@+id/radioAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Admin" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_gravity="start"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorPrimary"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/goToRegistration"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Don't have an account? Register"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>

</RelativeLayout>
